--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <aside>
         <h2>About Me</h2>
-
+        <p>My favorite move is the count of monte cristo.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, debitis earum molestias veniam suscipit aliquam totam exercitationem tempore neque vitae. Minima, corporis pariatur facere at quo porro beatae similique! Odit.</p>
     </aside>
-    
+
     <footer>
         Made with ♥ @ Udacity
     </footer>
